# cmake-pch

./: .gitignore  CMakeLists.txt  README.md
include/: config.h  lib1.h
src/: lib1.cpp  main.cpp
